--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="container">
     <header>
   
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg bg-light d-flex justify-content-between">
             <div class="container-fluid">
               <a class="navbar-brand text-primary fw-bold fs-2" href="#">News World</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,6 +29,20 @@
               </div>
             </div>
           </nav>
+          <hr>
+          <section class="d-flex justify-content-evenly fs-5 fw-semibold text-primary">
+            <div>Breaking News</div>
+            <div>Regular News</div>
+            <div>International News</div>
+            <div>Entertainment</div>
+            <div>Culture</div>
+            <div>Culture</div>
+            <div>Arts</div>
+            <div>All News</div>
+          </section>
+          <section class="mt-5">
+            <div style="height:50px" class="w-100 rounded bg-light"> </div> 
+          </section>
     </header>
     <main>
 
