--- a/index.html
+++ b/index.html
@@ -30,15 +30,11 @@
             </div>
           </nav>
           <hr>
-          <section class="d-flex justify-content-evenly fs-5 fw-semibold text-primary">
-            <div>Breaking News</div>
-            <div>Regular News</div>
-            <div>International News</div>
-            <div>Entertainment</div>
-            <div>Culture</div>
-            <div>Culture</div>
-            <div>Arts</div>
-            <div>All News</div>
+          <section id="category-container" class="d-flex  fs-5 fw-semibold text-primary justify-content-evenly" >
+            <div class="category">
+
+            </div>
+            
           </section>
           <section class="mt-5">
             <div style="height:50px" class="w-100 rounded bg-light"> </div> 
@@ -50,6 +46,9 @@
     <footer>
 
     </footer>
+
+    <script src="js/index.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js">
+   
 </body>
 </html>
