--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
 
        </section>
 
-       
+       <section class="" id="modalContainer">
+        <div class="modal">
+
+        </div>
+       </section>
     </main>
     <footer>
 
