--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a class="nav-link text-dark fw-semibold fs-5" aria-current="page" href="#">News</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link  text-dark fw-semibold fs-5" href="#">Blogs</a>
+                    <a class="nav-link  text-dark fw-semibold fs-5" href="blogs.html">Blogs</a>
                   </li>
                   
                 </ul>
