--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
 
         </div>
        </section>
+
+       <section id="loader" class="d-none">
+        <div class="d-flex justify-content-center">
+          <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
+       </section>
     </main>
     <footer>
 
