--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             </div>
             
           </section>
-          <section class="mt-5">
-            <div style="height:50px" class="w-100 rounded bg-light"> </div> 
+          <section id="news-length">
+            
           </section>
     </header>
     <main>
