--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
           </nav>
           <hr>
-          <section id="category-container" class="d-flex  fs-5 fw-semibold justify-content-evenly" >
+          <section id="category-container" class="d-flex flex-md-row flex-column  fs-5 fw-semibold justify-content-evenly" >
             <div class="category "btn btn-primary border-none ">
 
             </div>
@@ -51,9 +51,7 @@
        </section>
 
        <section class="" id="modalContainer">
-        <div class="modal">
-
-        </div>
+        
        </section>
 
        <section id="loader" class="d-none">
@@ -63,6 +61,7 @@
           </div>
         </div>
        </section>
+
     </main>
     <footer>
 
