--- a/blogs.html
+++ b/blogs.html
@@ -13,7 +13,7 @@
   <body>
     <section class="container d-flex flex-md-row flex-column">
       <div class="m-2 p-2">
-        <h3>1.Differences between var,let ant const?</h3>
+        <h3 class="text-primary">1.Differences between var,let ant const?</h3>
         <p>
           The basic distinction between var, let and const is that var is global
           scope and let and const are block scope.Another difference between
@@ -22,7 +22,9 @@
         </p>
       </div>
       <div class="m-2 p-2">
-        <h3>2. Diference between Regular Function and Arrow Function?</h3>
+        <h3 class="text-primary">
+          2. Diference between Regular Function and Arrow Function?
+        </h3>
         <p>
           The common difference between regular and arrow function is that in
           regular function you have to use 'function' keyword in starting but in
@@ -35,7 +37,7 @@
       </div>
 
       <div class="m-2 p-2">
-        <h3>3.Why we use template String?</h3>
+        <h3 class="text-primary">3.Why we use template String?</h3>
         <p>
           ES6 introduces a new kind of string called template string.Template
           string is a powerful feature of modern JavaScript. It allows us to
@@ -43,6 +45,17 @@
         </p>
       </div>
     </section>
+    <a
+      href="index.html"
+      class="bg-primary p-2 text-white w-75 mx-0 text-decoration-none"
+    >
+      Back to Home</a
+    >
+    <footer>
+      <div class="text-center m-5 p-5 text-primary fw-bold fs-5 bg-light">
+        <p>Copyright 2022 News World</p>
+      </div>
+    </footer>
 
     <link
       rel="stylesheet"
