--- a/index.html
+++ b/index.html
@@ -64,11 +64,13 @@
 
     </main>
     <footer>
-
+       <div class=" text-center m-5 p-5 text-primary fw-bold fs-5 bg-light">
+        <p>Copyright 2022 News World</p>
+       </div>
     </footer>
 
     <script src="js/index.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
    
     
 </body>
